# computational-explorations

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: ai_math_analysis_report.md  attack_report.md  attack_surface_report.md  blog_post_draft.md  convergence_analysis_report.md  cross_analysis_report.md  deep_analysis_report.md  dependency_graph_report.md  difficulty_decomposition_report.md  doi_candidates.md  erdos_research_compendium.tex  information_theory_report.md  interdisciplinary_open_problems_domains_9_13.md  interestingness_report.md  meta_conjectures_report.md  meta_patterns_report.md  novel_problems.md  opportunity_map_report.md  pattern_synthesis_report.md  prediction_report.md  problem_families_report.md  problem_network_report.md  problem_screening.md  provenance_and_verification.md  publishable_candidates.md  relationship_map.md  relationship_report.md  research_frontier_report.md  research_insights.md  resolution_predictor_report.md  saliency_scanner_report.md  session_2026_03_15_findings.md  session_2026_03_16_iteration3.md  similarity_report.md  solution_exploration.md  spectral_report.md  synthesis_report.md  technique_transfer_matrix.md  techniques_and_solutions.md  temporal_evolution_report.md  (+1 more)
lean/: CoprimePerfect.lean  CoprimeRamsey.lean  Erdos43.lean  Erdos883.lean  NPG15_SchurGroups.lean  NPG2_DensitySchur.lean  README.md  SchurTwoGroups.lean  lakefile.lean
paper/: coprime_ramsey_note.tex  forum_post_draft.md  novel_ramsey_problems.tex  novel_ramsey_problems_journal.tex  schur_extensions_note.tex  survival_analysis_note.tex
(+198 files in other folders)
