[project]
name = "erdos-problems"
version = "0.1.0"
description = "Erdős Problems Research: Relationship discovery, novel problems, and solution exploration"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "networkx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__",
    "def main",
    "def run_experiments",
]
